--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "2018 okcoders backend class week 1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "keywords": [
     "Express",
